--- a/consult/less/modal_payment.less
+++ b/consult/less/modal_payment.less
@@ -35,6 +35,10 @@
 			padding-top: 0;
 			margin-top: -7px;
 		}
+		span.plan{
+			color:@sea;
+			font-weight:500;
+		}
 		form{
 			//overflow: hidden;
 			width: 510px;
