--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -22,3 +22,6 @@
 @import url('page_clients.less'); 
 @import url('page_payment_history.less');
 @import url('page_user_consults.less');
+@import url('page_faq.less');
+@import url('media.less');
+@import url('modal_payment.less');
