--- a/consult/less/global.less
+++ b/consult/less/global.less
@@ -1,3 +1,15 @@
+body.page-text{
+    h1:first-child{
+        margin:30px 0;
+        text-align: center;
+
+    }
+    & > .wrapper > .content-block{
+        p{
+            line-height:160%;
+        }
+    }
+}
 .no-script-layout{
     position: fixed;
     width: 100%;
@@ -69,6 +81,12 @@ aside.additional-menu{
                         background: @white;
                         color:@sea;
 
+                    }
+                }
+                & > ul li{
+                    padding-left: 20px;
+                    &:first-child{
+                        border-top:solid 1px #e7f3ee;
                     }
                 }
             }
@@ -185,6 +203,14 @@ header.header {
             float: left;
             margin-right: 20px;
             margin-top: 11px;
+            font-size:1.0rem;
+            border-radius:10px;
+            -o-border-radius:10px;
+            -moz-border-radius:10px;
+            -webkit-border-radius:10px;
+            color:#aeaeae;
+            background: #f5f5f5;
+            padding:3px 10px;
         }
         .clock{
             float: right;
@@ -295,6 +321,9 @@ header.header {
     .mainmenu {
         float: right;
         margin: 13px 0;
+        &.icons{
+            display: none;
+        }
         li {
             float: left;
             text-transform: uppercase;
@@ -303,6 +332,13 @@ header.header {
             a{
                 color: @sea;
                 text-decoration: none;
+            }
+            i.fa{
+                color:  #8aa4a2;
+                font-size: 1.8rem;
+            }
+            &:hover i, &.active i{
+                color:@sea;
             }
         }
     }
