--- a/consult/less/modal_sign_up_consultation.less
+++ b/consult/less/modal_sign_up_consultation.less
@@ -98,23 +98,13 @@
 						color:@sea;
 					}
 				}
-				a.item.selected{
-					background:@yellow_dark;
-					box-shadow: inset 0 0 2px #666;
-					-o-box-shadow: inset 0 0 2px #666;
-					-moz-box-shadow: inset 0 0 2px #666;
-					-webkit-box-shadow: inset 0 0 2px #666;
-					color:@white;
-				}
 			}
 			.left{
 				//float: left;
 				width: 300px;
 				.time-slider{
 					width: 290px;
-					padding-top: 30px;
-					margin-top: -30px;	
-					-webkit-user-select:none;
+					webkit-user-select:none;
 					-moz-user-select:none;
 					.bar{
 						margin-top: 20px;
@@ -135,7 +125,7 @@
 							background: @sky;
 							margin-left: -10px;
 							top:-11px;
-							left: 0;
+							left: 60px;
 							border-radius:20px;
 							-o-border-radius:20px;
 							-webkit-border-radius:20px;
@@ -143,7 +133,7 @@
 						}
 					}
 					.labels{
-						width: 118%;
+						width: 115%;
 						margin-top: 10px;
 						overflow: hidden;
 						-webkit-user-select:none;
@@ -152,10 +142,6 @@
 							float: left;
 							width: 25%;
 							font-size:1.2rem;
-							&.selected{
-								font-weight:700;
-								color:@sea;
-							}
 						}
 					}
 				}
@@ -193,9 +179,6 @@
 					-moz-box-shadow:0 0 7px #ccc;
 					-o-box-shadow:0 0 7px #ccc;
 					-webkit-box-shadow:0 0 7px #ccc;
-					-moz-user-select:none;
-					-ms-user-select:none;
-					-webkit-user-select:none;
 					.grid{
 						//width: 100px;
 						line-height: 100%;
@@ -203,9 +186,6 @@
 						.row{
 							text-align: center;
 							padding: 2.4px 0;
-							box-sizing:border-box;
-							-moz-box-sizing:border-box;
-							height:17px;
 							&.unwork{
 								background: #aabdbb;
 								color:@white;
@@ -214,18 +194,6 @@
 								background: #33b679;
 								color:@white;
 							}
-						}
-						.selector{
-							position: absolute;
-							border:solid 1px #19935a;
-							box-sizing:border-box;
-							-moz-box-sizing:border-box;
-							width: 100%;
-							top:0;
-							height:0;
-							background: rgba(121,232,180,0.3);
-							z-index: 1;
-							cursor: pointer;
 						}
 					}
 				}
