Тест размазывания по экрану

--- a/consult/less/cheat-sheet.less
+++ b/consult/less/cheat-sheet.less
@@ -1,9 +1,10 @@
 .wrapper{
     position: relative;
-    width: 90%;
+    width: 95% !important;
     margin:auto;
     overflow: hidden;
     max-width:960px;
+    max-width:95% !important;
     & > section{
         margin-bottom: 30px;
         &.colors{
