--- a/consult/less/cheat-sheet.less
+++ b/consult/less/cheat-sheet.less
@@ -1,10 +1,10 @@
 .wrapper{
     position: relative;
-    width: 95% !important;
+    width: 90%;
     margin:auto;
     overflow: hidden;
     max-width:960px;
-    max-width:95% !important;
+    //max-width:95% !important;
     & > section{
         margin-bottom: 30px;
         &.colors{
