--- a/di/less/styles.less
+++ b/di/less/styles.less
@@ -110,6 +110,7 @@ div.header{
 	.block-left {
 		background: url('../images/block-left-bg.jpg') no-repeat center center;
 		background-size:cover;
+		height:100%;
 		width: 61%;
 		float: left;
 		border-right:solid 4px #fff;
@@ -164,6 +165,7 @@ div.header{
 		background: #a550a2;
 		width: 39%;
 		float: right;
+		height:100%;
 		.text{
 			float: left;
 			width: 40%;
@@ -209,6 +211,7 @@ div.header{
 					font-weight: 600;
 					line-height: 17px;
 					text-align: center;
+					display: block;
 				}
 				&.data{
 					color: #f1bef0;
