--- a/di/less/styles.less
+++ b/di/less/styles.less
@@ -105,6 +105,50 @@ a.sign-up{
 		background: #a550a2 - #222;
 	}
 }
+.fixed-menu-container{
+	overflow: hidden;
+	background: #fff;
+	position: fixed;
+	top:0;
+	width:100%;
+	height:50px;
+	z-index: 1;
+	.fixed-menu{
+		float: right;
+		right: 50%;
+		ul.menu{
+			left: 50%;
+			float: left;
+			padding: 0;
+			list-style:none;
+			li{
+				float: left;
+				font-size:16px;
+				text-align: center;
+				text-transform: uppercase;
+				font-weight:700;
+				margin:0 30px;
+				a{
+					color:#8b7f8d;
+					text-decoration: none;
+					&:hover{
+						text-decoration: underline;
+					}
+				}
+				&.up{
+					top:-20px;
+					a{
+						display: block;
+						width:55px;
+						padding-top: 65px;
+						background: url('../images/icon-up.png') top center no-repeat;
+					}
+				}
+			}
+		}
+	}
+}
+
 div.header{
 	background: #a550a2;
 	.block-left {
@@ -240,13 +284,16 @@ div.header{
 section.block1{
 	width: 960px;
 	margin:auto;
+	padding-top: 100px;
+	padding-bottom: 100px;
+
 	h2{
 		color: #582257;
 		font-size: 37px;
 		font-weight: 300;
 		line-height: 50px;
 		text-align: center;
-		padding-top: 150px;
+		margin: 0;
 	}
 	div{
 		color:  #8b7f8d;
@@ -255,7 +302,6 @@ section.block1{
 		line-height: 30px;
 		text-align: left;
 		padding-top: 80px;
-		padding-bottom: 160px;
 		margin: 0;
 		span{
 			color:  #582257;
@@ -265,11 +311,12 @@ section.block1{
 			text-align: left;
 		}
 		&.column-left{
-			width: 50%;
+			width: 48%;
 			float: left;
+			padding-right: 4%;
 		}
 		&.column-right{
-			width: 50%;
+			width: 48%;
 			float: right;
 		}
 		&.clr{
@@ -312,7 +359,7 @@ section.block2{
 section.block3{
 	background: url('../images/bg-block3.jpg') no-repeat;
 	background-position:90% bottom;
-	padding-top: 195px;
+	padding-top: 100px;
 	padding-bottom: 80px;
 	.wrapper{
 		width: 960px;
@@ -325,6 +372,7 @@ section.block3{
 				font-weight: 300;
 				line-height: 40px;
 				text-align: left;
+				margin: 0;
 			}
 			p{
 				color: #8b7f8d;
@@ -341,15 +389,16 @@ section.block4{
 	.wrapper{
 		width: 960px;
 		margin:auto;
-		padding-bottom: 165px;
+		padding-top: 120px;
+		padding-bottom: 50px;
 		h3{
 		color: #582257;
 		font-size: 35px;
 		font-weight: 400;
 		line-height: 50px;
 		text-align: center;
-		padding-top: 150px;
-		padding-bottom: 100px;
+		padding: 0;
+		padding-bottom: 50px;
 		margin: 0;
 		}
 		p{
@@ -361,30 +410,37 @@ section.block4{
 			padding: 15px 0 15px 0;
 			margin: 0;
 			&.left{
-				width: 50%;
+				width: 48%;
 				float: left;
+				padding-right: 4%;
 			}
 			&.right{
-				width: 50%;
+				width: 48%;
 				float: right;
 			}
 		}
 	}
 }
 section.block5{
-	padding-top: 150px;
-	h4{
-		color: #582257;
-		font-size: 30px;
-		font-weight: 300;
-		line-height: 46px;
-		text-align: center;
-	}
-	.video{
-		width: 620px;
+	.wrapper{	
+		width: 960px;
 		margin: auto;
-		height: 430px;
-	}
+		padding-top: 100px;
+		h4{
+			color: #582257;
+			font-size: 30px;
+			font-weight: 300;
+			line-height: 46px;
+			text-align: center;
+			margin: 0;
+			margin-bottom: 30px;
+		}
+		.video{
+			width: 620px;
+			margin: auto;
+			height: 430px;
+		}
+	}	
 }
 section.block6{
 	.wrapper{
@@ -392,7 +448,7 @@ section.block6{
 		margin:auto;
 		&.with-icon{
 			background: url('../images/icon-block6.jpg') center right no-repeat;
-			padding-top: 150px;
+			padding-top: 100px;
 		}
 		.left{
 			float: left;
@@ -458,7 +514,7 @@ section.block7{
 		margin:auto;
 		&.with-icon{
 			background: url('../images/icon-block7.jpg') center right no-repeat;
-			padding-top: 150px;
+			padding-top: 100px;
 		}
 		.left{
 			float: left;
@@ -520,9 +576,9 @@ section.block7{
 }
 section.block8{
 	.wrapper{
-		width: 960px;
+		width: 515px;
 		margin:auto;
-		padding-top: 150px;
+		padding-top: 100px;
 		h4{
 			color: #582257;
 			font-size: 30px;
@@ -530,6 +586,7 @@ section.block8{
 			letter-spacing: -0.6px;
 			line-height: 42px;
 			text-align: center;
+			margin: 0;
 		}
 		p{
 			color: #8b7f8d;
@@ -550,8 +607,8 @@ section.block9{
 	.wrapper{
 		width: 960px;
 		margin: auto;
-		padding-top: 150px;
-		padding-bottom: 160px;
+		padding-top: 100px;
+		padding-bottom: 80px;
 		h2{
 			color: #582257;
 			font-size: 37px;
@@ -562,11 +619,12 @@ section.block9{
 			padding-bottom: 90px;
 		}
 		.left{
-			width: 50%;
+			width: 48%;
 			float: left;
+			padding-right: 4%;
 		}
 		.right{
-			wight: 50%;
+			width: 48%;
 			float: right;
 		}
 		p{
@@ -616,7 +674,7 @@ section.block11{
 	.wrapper{
 		width: 630px;
 		margin: auto;
-		padding-top: 150px;
+		padding-top: 100px;
 		p{
 			color: #8b7f8d;
 			font-size: 18px;
@@ -638,8 +696,9 @@ section.block12{
 			font-weight: 300;
 			line-height: 40px;
 			text-align: center;
-			padding-top: 150px;
-			padding-bottom: 80px;
+			padding-top: 100px;
+			padding-bottom: 30px;
+			margin: 0;
 		}
 		.item{
 			float:left;
@@ -709,7 +768,7 @@ section.block13{
 		width:95%;
 		margin: auto;
 		max-width:1300px;
-		padding-bottom: 140px;
+		padding-bottom: 50px;
 		h3{
 			margin-top: 70px;
 			color:  #582257;
@@ -740,7 +799,7 @@ section.block13{
 		}
 		.results{
 			width: 80%;
-			margin:125px auto 20px auto;
+			margin:100px auto 20px auto;
 			ul{
 				li{
 					margin:20px 0;
@@ -753,7 +812,7 @@ section.block13{
 	}
 	.schedule{
 		background: #f6f4f6;
-		padding-top: 40px;
+		padding-top: 50px;
 		.wrapper{
 			width: 95%;
 			max-width:930px;
@@ -767,10 +826,11 @@ section.block13{
 				-moz-box-sizing:border-box;
 				padding-left: 40%;
 				padding-top: 30px;
+				margin: 0;
 			}
 			table{
 				width: 100%;
-				margin-top: 80px;
+				margin-top: 30px;
 				td{
 					width: 33%;
 				}
@@ -786,7 +846,7 @@ section.block14{
 		width:95%;
 		margin: auto;
 		max-width:1300px;
-		padding-bottom: 140px;
+		padding-bottom: 50px;
 		h3{
 			margin-top: 70px;
 			color:  #582257;
@@ -819,25 +879,34 @@ section.block14{
 			
 		}
 		.reviews{
-			h4{
-				color: #582257;
-				font-size: 30px;
-				font-weight: 300;
-				line-height: 40px;
-				text-align: center;
-			}
-			.left{
-				float: left;
-				width: 48%;
-				margin-right: 4%;
-			}
-			.right{
-				float: right;
-				width: 48%;
-			}
-			.marked{
-				color:#582257;
-				font-weight:600;
+			margin: 0;
+			.wrapper{
+				width: 960px;
+				margin: auto;
+				padding: 0;
+				h4{
+					color: #582257;
+					font-size: 30px;
+					font-weight: 300;
+					line-height: 40px;
+					text-align: center;
+				}
+				.left{
+					float: left;
+					width: 48%;
+					margin-right: 4%;
+				}
+				.right{
+					float: right;
+					width: 48%;
+				}
+				.marked{
+					color:#582257;
+					font-weight:600;
+				}
+				.review{
+					margin: 0;
+				}
 			}
 		}
 	}
@@ -857,10 +926,11 @@ section.block14{
 				-moz-box-sizing:border-box;
 				padding-left: 40%;
 				padding-top: 30px;
+				margin: 0;
 			}
 			table{
 				width: 100%;
-				margin-top: 80px;
+				margin-top: 30px;
 				td{
 					width: 33%;
 				}
@@ -909,8 +979,8 @@ section.block15{
 		.video{
 			width: 940px;
 			margin:auto;
-			margin-top: 140px;
-			margin-bottom: 150px;
+			margin-top: 100px;
+			margin-bottom: 100px;
 			h3{
 				display: block;
 				width: 95%;
@@ -937,7 +1007,7 @@ section.block15{
 	.schedule{
 		background: #f6f4f6;
 		padding-top: 40px;
-		padding-bottom: 130px;
+		padding-bottom: 50px;
 		.wrapper{
 			width: 95%;
 			max-width:930px;
@@ -951,10 +1021,11 @@ section.block15{
 				-moz-box-sizing:border-box;
 				padding-left: 40%;
 				padding-top: 30px;
+				margin: 0;
 			}
 			table{
 				width: 100%;
-				margin-top: 80px;
+				margin-top: 30px;
 				td{
 					width: 33%;
 				}
@@ -1001,13 +1072,16 @@ section.block16{
 		}
 		.case{
 			background: url('../images/smoke.jpg') center right no-repeat;
-			padding-top: 140px;
+			padding-top: 150px;
+			padding-left: 50px;
 			h3{
 				color: #582257;
 				font-size: 34px;
 				font-weight: 300;
 				line-height: 42px;
 				text-align: left;
+				margin: 0;
+				padding-bottom: 20px;
 			}
 			p{
 				color: #8b7f8d;
@@ -1016,31 +1090,36 @@ section.block16{
 				line-height: 30px;
 				text-align: left;
 				transform: scaleY(1.0833);
-				padding-bottom: 300px;
+				padding-bottom: 150px;
+				margin: 0;
 			}
 		}
 	}
 	.reviews{
-		margin-top: 90px;
-		h4{
-			color: #582257;
-			font-size: 30px;
-			font-weight: 300;
-			line-height: 40px;
-			text-align: center;
-		}
-		.left{
-			float: left;
-			width: 48%;
-			margin-right: 4%;
-		}
-		.right{
-			float: right;
-			width: 48%;
-		}
-		.marked{
-			color:#582257;
-			font-weight:600;
+		.wrapper{
+			width: 960px;
+			margin: auto;
+			margin-top: 90px;
+			h4{
+				color: #582257;
+				font-size: 30px;
+				font-weight: 300;
+				line-height: 40px;
+				text-align: center;
+			}
+			.left{
+				float: left;
+				width: 48%;
+				margin-right: 4%;
+			}
+			.right{
+				float: right;
+				width: 48%;
+			}
+			.marked{
+				color:#582257;
+				font-weight:600;
+			}
 		}
 	}
 	.schedule{
@@ -1059,10 +1138,11 @@ section.block16{
 				-moz-box-sizing:border-box;
 				padding-left: 40%;
 				padding-top: 30px;
+				margin: 0;
 			}
 			table{
 				width: 100%;
-				margin-top: 80px;
+				margin-top: 30px;
 				td{
 					width: 33%;
 				}
@@ -1075,7 +1155,7 @@ section.block16{
 
 }
 section.footer{
-	padding:120px 0 50px 0;
+	padding:100px 0 50px 0;
 	.menu-container{
 		float: right;
 		right: 50%;
