--- a/di/css/media.css
+++ b/di/css/media.css
@@ -1,11 +1,196 @@
+@media screen and (max-width: 1440px) {
+  /* line 2, media.less */
+  div.header .block-left .text {
+    width: 70%;
+    padding-top: 120px;
+    padding-right: 80px;
+  }
+  /* line 7, media.less */
+  div.header .block-right .text {
+    padding-top: 120px;
+    padding-left: 120px;
+  }
+  /* line 11, media.less */
+  section.block13 .wrapper .photo-container {
+    width: 440px;
+  }
+  /* line 14, media.less */
+  section.block14 .wrapper .photo-container {
+    width: 360px;
+  }
+  /* line 17, media.less */
+  section.block14 .wrapper .photo-container {
+    width: 420px;
+  }
+  /* line 20, media.less */
+  section.block16 .wrapper .photo-container {
+    width: 450px;
+  }
+}
+@media screen and (max-width: 1366px) {
+  /* line 28, media.less */
+  div.header .block-left .text {
+    width: 60%;
+    padding-right: 50px;
+  }
+  /* line 32, media.less */
+  div.header .block-right .text {
+    padding-top: 90px;
+    padding-left: 80px;
+  }
+  /* line 36, media.less */
+  div.header .block-left .text {
+    background: url('../images/icons.png') left 0px no-repeat;
+  }
+  /* line 39, media.less */
+  div.header .block-right .text .icon {
+    padding-top: 40px;
+  }
+  /* line 42, media.less */
+  div.header .block-left .text ul li {
+    margin-bottom: 10px;
+  }
+  /* line 45, media.less */
+  section.block12 .wrapper .item {
+    margin-bottom: 30px;
+  }
+  /* line 48, media.less */
+  section.block12 .wrapper h3 {
+    padding-bottom: 20px;
+  }
+  /* line 51, media.less */
+  section.block13 .wrapper .photo-container {
+    width: 340px;
+  }
+  /* line 54, media.less */
+  section.block14 .wrapper .photo-container {
+    width: 290px;
+  }
+  /* line 57, media.less */
+  section.block15 .wrapper .photo-container {
+    width: 350px;
+  }
+  /* line 60, media.less */
+  section.block16 .wrapper .photo-container {
+    width: 340px;
+  }
+}
+@media screen and (max-width: 1280px) {
+  /* line 69, media.less */
+  section.block13 .wrapper .photo-container {
+    width: 400px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  /* line 83, media.less */
+  div.header .block-left .text {
+    width: 90%;
+  }
+}
+@media screen and (max-height: 900px) {
+  /* line 89, media.less */
+  div.header .block-left .text {
+    width: 70%;
+    padding-top: 120px;
+    padding-right: 80px;
+  }
+  /* line 94, media.less */
+  div.header .block-right .text {
+    padding-top: 120px;
+    padding-left: 120px;
+  }
+  /* line 98, media.less */
+  section.block13 .wrapper .photo-container {
+    width: 440px;
+  }
+  /* line 101, media.less */
+  section.block14 .wrapper .photo-container {
+    width: 360px;
+  }
+  /* line 104, media.less */
+  section.block14 .wrapper .photo-container {
+    width: 420px;
+  }
+  /* line 107, media.less */
+  section.block16 .wrapper .photo-container {
+    width: 450px;
+  }
+}
 @media screen and (max-height: 800px) {
+  /* line 114, media.less */
   div.header .block-left .text ul li {
     margin-bottom: 0px;
   }
-  div.header .block-right .text {
-    padding-top: 35px;
-  }
+  /* line 118, media.less */
   div.header .block-right .text .icon {
-    padding-top: 20px;
+    padding-top: 40px;
+  }
+  /* line 122, media.less */
+  section.block12 .wrapper h3 {
+    padding-bottom: 0;
+  }
+  /* line 125, media.less */
+  section.block12 .wrapper .item {
+    height: 200px;
+    margin-bottom: 40px;
+  }
+  /* line 129, media.less */
+  div.header .block-left .text {
+    width: 60%;
+    padding-right: 50px;
+  }
+  /* line 133, media.less */
+  div.header .block-right .text {
+    padding-top: 90px;
+    padding-left: 80px;
+  }
+  /* line 137, media.less */
+  div.header .block-right .text .icon {
+    padding-top: 40px;
+  }
+  /* line 140, media.less */
+  div.header .block-left .text ul li {
+    margin-bottom: 10px;
+  }
+  /* line 143, media.less */
+  section.block12 .wrapper .item {
+    margin-bottom: 30px;
+  }
+  /* line 146, media.less */
+  section.block12 .wrapper h3 {
+    padding-bottom: 20px;
+  }
+  /* line 149, media.less */
+  section.block13 .wrapper .photo-container {
+    width: 340px;
+  }
+  /* line 152, media.less */
+  section.block14 .wrapper .photo-container {
+    width: 290px;
   }
 }
+@media screen and (max-height: 760px) {
+  /* line 160, media.less */
+  div.header .block-left .text {
+    padding-top: 90px;
+  }
+  /* line 163, media.less */
+  div.header .block-left .text {
+    width: 60%;
+    padding-right: 120px;
+  }
+  /* line 167, media.less */
+  div.header .block-right .text {
+    padding-top: 90px;
+    padding-left: 80px;
+  }
+  /* line 171, media.less */
+  div.header .block-right .text .icon {
+    padding-top: 0;
+  }
+  /* line 174, media.less */
+  div.header .block-right .text .icon-bottom {
+    padding-top: 15px;
+  }
+}
+/*# sourceMappingURL=media.css.map */
