--- a/di/less/media.less
+++ b/di/less/media.less
@@ -1,11 +1,178 @@
+@media screen and (max-width: 1440px){
+	div.header .block-left .text{
+		width: 70%;
+		padding-top: 120px;
+		padding-right: 80px;
+	}
+	div.header .block-right .text{
+		  padding-top: 120px;
+		  padding-left: 120px;
+	}
+	section.block13 .wrapper .photo-container{
+		width: 440px;
+	}
+	section.block14 .wrapper .photo-container{
+		width: 360px;
+	}
+	section.block14 .wrapper .photo-container{
+		width: 420px;
+	}
+	section.block16 .wrapper .photo-container{
+		width: 450px;
+	}
+}
+
+
+
+@media screen and (max-width: 1366px){
+	div.header .block-left .text{
+		width: 60%;
+		padding-right: 50px;
+	}
+	div.header .block-right .text {
+		padding-top: 90px;
+		padding-left: 80px;
+	}
+	div.header .block-left .text{
+		background: url('../images/icons.png') left 0px no-repeat;
+	}
+	div.header .block-right .text .icon{
+		  padding-top: 40px;
+	}
+	div.header .block-left .text ul li{
+		margin-bottom: 10px;
+	}
+	section.block12 .wrapper .item{
+		margin-bottom: 30px;
+	}
+	section.block12 .wrapper h3{
+		padding-bottom: 20px;
+	}
+	section.block13 .wrapper .photo-container{
+		width: 340px;
+	}
+	section.block14 .wrapper .photo-container{
+		width: 290px;
+	}
+	section.block15 .wrapper .photo-container{
+		width: 350px;
+	}
+	section.block16 .wrapper .photo-container{
+		width: 340px;
+	}
+}
+
+
+
+
+@media screen and (max-width: 1280px){
+	section.block13 .wrapper .photo-container{
+		width: 400px;
+	}
+}
+
+
+
+@media screen and (max-width: 1144px){
+	
+}
+
+
+
+@media screen and (max-width: 1024px){
+	div.header .block-left .text{
+		width: 90%;
+	}
+}
+
+@media screen and (max-height: 900px){
+	div.header .block-left .text{
+		width: 70%;
+		padding-top: 120px;
+		padding-right: 80px;
+	}
+	div.header .block-right .text{
+		  padding-top: 120px;
+		  padding-left: 120px;
+	}
+	section.block13 .wrapper .photo-container{
+		width: 440px;
+	}
+	section.block14 .wrapper .photo-container{
+		width: 360px;
+	}
+	section.block14 .wrapper .photo-container{
+		width: 420px;
+	}
+	section.block16 .wrapper .photo-container{
+		width: 450px;
+	}
+}
+
+
 @media screen and (max-height: 800px){
 	div.header .block-left .text ul li{
 		margin-bottom: 0px;
 	}
 	div.header .block-right .text{
 		.icon{
-			padding-top: 20px;
+			padding-top: 40px;
 		}
-		padding-top: 35px;
 	}
+	section.block12 .wrapper h3{
+		padding-bottom: 0;
+	}
+	section.block12 .wrapper .item{
+		height: 200px;
+		margin-bottom: 40px;
+	}
+	div.header .block-left .text{
+		width: 60%;
+		padding-right: 50px;
+	}
+	div.header .block-right .text {
+		padding-top: 90px;
+		padding-left: 80px;
+	}
+	div.header .block-right .text .icon{
+		  padding-top: 40px;
+	}
+	div.header .block-left .text ul li{
+		margin-bottom: 10px;
+	}
+	section.block12 .wrapper .item{
+		margin-bottom: 30px;
+	}
+	section.block12 .wrapper h3{
+		padding-bottom: 20px;
+	}
+	section.block13 .wrapper .photo-container{
+		width: 340px;
+	}
+	section.block14 .wrapper .photo-container{
+		width: 290px;
+	}
+}
+
+
+
+@media screen and (max-height: 760px){
+	div.header .block-left .text{
+		padding-top: 90px;
+	}
+	div.header .block-left .text{
+		width: 60%;
+		padding-right: 120px;
+	}
+	div.header .block-right .text {
+		padding-top: 90px;
+		padding-left: 80px;
+	}
+	div.header .block-right .text .icon{
+		  padding-top: 0;
+	}
+	div.header .block-right .text .icon-bottom{
+		padding-top: 15px;
+	}
+	
 }
