--- a/di/less/styles.less
+++ b/di/less/styles.less
@@ -160,10 +160,11 @@ div.header{
 		border-right:solid 4px #fff;
 		box-sizing:border-box;
 		-moz-box-sizing:border-box;
+		padding-right: 90px;
 		.text{
 			float: right;
 			width: 60%;
-			padding-top: 75px;
+			padding-top: 120px;
 			padding-bottom: 147px;
 			.logo{
 				float: left;
@@ -213,7 +214,7 @@ div.header{
 		.text{
 			float: left;
 			width: 40%;
-			padding-top: 75px;
+			padding-top: 120px;
 			padding-bottom: 60px;
 			padding-left: 140px;
 			h5{
